k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: petshop

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgres
          image: postgres:16

          ports:
            - containerPort: 5432
          resources:
          limits:
              memory: "1Gi"
              cpu: "500m"
              ephemeral-storage: "2Gi" # Limite de armazenamento temporário
            requests:
              memory: "512Mi"
              cpu: "250m"
              ephemeral-storage: "1Gi"

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: petshop

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
